--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
            <p id="sco"></p>
 
            <form id="prize_form">
+
+          <h2 class="p_tit">✅ 경품응모하기</h2>  
           
-          <label>이름:<input type="text" aria-label="Full name" name="fullName" placeholder="성함" required/></label>  
-          <label>이메일:<input type="email" name="email" placeholder="이메일" required/></label>
-          <label>전화번호:<input type="tel" name="tel" placeholder="전화번호"></label>    
+          <label>이름:<input type="text" aria-label="Full name" id="name" placeholder="성함" id="p1" required/></label>  
+          <label>이메일:<input type="email" id="email" placeholder="이메일" id="p1" required/></label>
+          <label>전화번호:<input type="tel" id="tel" placeholder="전화번호" id="p1"></label>    
 
         <div class="subt" id="subt">
           <button class="moin_btn" type="submit">제출</button>
         </div>
         </form>
+
+        <p id="error" style="color: red;"></p>
           </div> 
         </div><!--.modal-->
 
