--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
           <h2 class="p_tit">✅ 경품응모하기</h2>  
           
-          <label>이름:<input type="text" aria-label="Full name" id="name" placeholder="성함" id="p1" required/></label>  
-          <label>이메일:<input type="email" id="email" placeholder="이메일" id="p1" required/></label>
-          <label>전화번호:<input type="tel" id="tel" placeholder="전화번호" id="p1"></label>    
+          <label><span>이름:</span><input type="text" aria-label="Full name" id="name" placeholder="성함" style="ime-mode:active" required/></label>  
+          <label><span>이메일:</span><input type="email" id="email" placeholder="이메일" required/></label>
+          <label><span>전화번호:</span><input type="tel" id="tel" placeholder="전화번호" ></label>    
 
         <div class="subt" id="subt">
           <button class="moin_btn" type="submit">제출</button>
